# JPoyson-Aroma-Diffuser

./: .gitignore  README.md  hacs.json  pyproject.toml
custom_components/: __init__.py
custom_components/jpoyson_aroma_diffuser/: __init__.py  config_flow.py  const.py  device_manager.py  mainfest.json  manifest.json  sensor.py  switch.py
custom_components/jpoyson_aroma_diffuser/translations/: en.json
